--- a/site/register.html
+++ b/site/register.html
@@ -87,8 +87,8 @@
 
 					<div class="text-center p-t-136">
 						<a class="txt2" href="index.html">
+							<i class="fa fa-long-arrow-left m-l-5" aria-hidden="true"></i>
 							Already have an account?
-							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
 				</form>
