--- a/site/register.html
+++ b/site/register.html
@@ -51,7 +51,7 @@
 						<input class="input100" type="text" name="firstName" placeholder="First Name">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
+							<i class="fa fa-address-card" aria-hidden="true"></i>
 						</span>
 					</div>
 
@@ -59,7 +59,7 @@
 						<input class="input100" type="text" name="lastName" placeholder="Last Name">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
+							<i class="fa fa-address-card" aria-hidden="true"></i>
 						</span>
 					</div>
 
