--- a/site/register.html
+++ b/site/register.html
@@ -86,7 +86,7 @@
 					</div>
 
 					<div class="text-center p-t-136">
-						<a class="txt2" href="index.html">
+						<a class="txt2" href="login.html">
 							<i class="fa fa-long-arrow-left m-l-5" aria-hidden="true"></i>
 							Already have an account?
 						</a>
